# pico_spdif_rx

samples/spdif_to_uac/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c  usb_microphone.c  usb_microphone.h  usbd_mic2ch.h
samples/spdif_to_udp/: CMakeLists.txt  main.c
